--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "license": "MIT",
     "require": {
         "slim/slim": "~2.5",
-        "aura/sqlquery": "~2.1"
+        "aura/sqlquery": "~2.1",
+        "aura/intl": "*"
     },
     "authors": [
         {
