--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "slim/slim": "~2.5",
         "aura/sqlquery": "~2.1",
+        "aura/filter": "~1.0.2",
     },
      "autoload": {
         "psr-4": {
